tema cthulhu adicionado e correção de cores

--- a/config.json
+++ b/config.json
@@ -1,32 +1,32 @@
 {
-    "name": "Chuvacord - ☺",
+    "name": "CthulhuCord - ☺",
     "theme": {
         "colors": {
             "primary": {
-                "050": "#2acaea",                               
+                "050": "#5C7070",                               
                 "100": "#25b5d2",
                 "200": "#21a1bb",
                 "300": "#1d8da3",
                 "400": "#19798c",
                 "500": "#156575",
-                "600": "#10505d",
-                "700": "#0c3c46",
+                "600": "#536565",
+                "700": "#657B7B",
                 "800": "#08282e",
                 "900": "#041417"
             },
             "neutrals": {
                 "000": "#FFFFFF",
-                "050": "#F5F7FA",
-                "100": "#E4E7EB",
-                "200": "#CBD2D9",
-                "300": "#9AA5B1",
-                "400": "#52667A",
-                "500": "#313D49",
-                "600": "#29333D",
-                "700": "#212931",
-                "800": "#181F25",
-                "900": "#101418",
-                "999": "#080A0C"
+                "050": "#F4F6F6",
+                "100": "#E9EDED",
+                "200": "#DDE3E3",
+                "300": "#D2DADA",
+                "400": "#C7D1D1",
+                "500": "#BCC8C8",
+                "600": "#B0BFBF",
+                "700": "#A5B6B6",
+                "800": "#9AACAC",
+                "900": "#8FA3A3",
+                "999": "#849A9A"
             }
         }
     },
